<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InCorporeSound</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tvAddPlayList">Add Playlist</string>
    <string name="sPlus">+</string>
    <string name="play">Play</string>
    <string name="change">Change</string>
    <string name="delete">Delete</string>
    <string name="title_activity_create_playlist">InCorporEdit</string>
    <string name="sInsertPlayListName">Insert Playlist Name</string>
    <string name="btAddSong">+</string>
    <string name="sAddSong">Add new song</string>
    <string name="sRandom">Random</string>
    <string name="sStraight">Straight</string>
    <string name="sOneTime">One time</string>
    <string name="sRepeated">Repeated</string>
    <string name="sNewPlaylist">Stretching Playlist</string>
    <string name="sExampleRepetitions">2,3,4,&#8230;</string>
    <string name="sRepetitionNum">Number of repetitions</string>
    <string name="sLoop">Loop</string>
    <string name="minus">-</string>
    <string name="sFadeIn">Fade in (sec)</string>
    <string name="sStart">Start</string>
    <string name="sDuration">Duration</string>
    <string name="title_activity_play">InCorporePlay</string>
    <string name="sPlayTemp">></string>
    <string name="sStopTemp">O</string>
    <string name="sPauseTemp">II</string>
    <string name="sForwardSongTemp">I></string>
    <string name="sBackwardTemp">&lt; I</string>
    <string name="sForwardTemp">I ></string>
    <string name="tvPlayListLabel">Playlist name: </string>
    <string name="sErrorMessage">There are songs removed from device </string>
    <string name="sOk">OK</string>
    <string name="sToastNoSong">No song inserted</string>
    <string name="sToastNoTitle">No playlist title inserted</string>
    <string name="sInsertNumberOfRepetitions">No repetition number inserted</string>
    <string name="sPlayListNameExist">Playlist name inserted already exists</string>
    <string name="sPlaylistSaved">Playlist saved</string>
    <string name="sWrongFormat">Wrong format</string>
    <string name="sDurationTooShort">Song duration is too short</string>
    <string name="sRandomMode">Random mode</string>
    <string name="sStraightMode">Straight mode</string>
    <string name="sZeroRepetetition">Number of repetition is zero</string>

    <string-array name="arDurations">
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
    </string-array>
    <string-array name="arFadeIn">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="arPlayMode">
        <item>random</item>
        <item>beginning</item>
    </string-array>

</resources>