<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="it.lma5.incorporesound.Activities.CreatePlaylistActivity"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvInsertPlayListName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sInsertPlayListName" />

        <EditText
            android:id="@+id/etNewPlaylistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/sNewPlaylist" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvFadeIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sFadeIn" />

        <Spinner
            android:id="@+id/spFadeIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/arFadeIn" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/rgOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rbRandom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sRandom" />

        <RadioButton
            android:id="@+id/rbStraight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:checked="true"
            android:text="@string/sStraight" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rgRepetition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rbRepeated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sRepeated" />

        <RadioButton
            android:id="@+id/rbOneTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/sOneTime" />

        <RadioButton
            android:id="@+id/rbLoop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sLoop" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvRepetitionNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sRepetitionNum" />

        <EditText
            android:id="@+id/etRepetitionNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/sExampleRepetitions"
            android:inputType="numberSigned" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btAddSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btAddSong" />

        <TextView
            android:id="@+id/tvAddSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sAddSong" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvSongList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>