<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvNotificationPlaylistName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvNotificationSongTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvNotificationArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Small Text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:gravity="center_horizontal"
        >

        <Button
            android:id="@+id/btNotificationBackward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sBackwardTemp" />

        <Button
            android:id="@+id/btNotificationpause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sPauseTemp" />

        <Button
            android:id="@+id/btNotificationPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sPlayTemp" />

        <Button
            android:id="@+id/btNotificationForward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sForwardTemp" />

    </LinearLayout>

</LinearLayout>
